...
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:background="@drawable/pulsantimenu"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="passasezione"
                android:background="@color/rosso"
                android:layout_weight="1">
            <RelativeLayout
                android:id="@+id/button1a"
                android:onClick="passasezione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                >

                <Button
                    android:id="@+id/button1b"
                    android:onClick="passasezione"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/calendario"
                    android:alpha="0.5"
...
